Added Quick Topic. Added Attachments. Added Attachment Media Embeds.
Renamed a load of *Store and *Cache methods to reduce the amount of unneccesary typing.
Added petabytes as a unit and cleaned up a few of the friendly units.
Refactored the username change logic to make it easier to maintain.
Refactored the avatar change logic to make it easier to maintain.
Shadow now uses CSS Variables for most of it's colours. We have plans to transpile this to support older browsers later on!
Snuck some CSS Variables into Tempra Conflux.
Added the GroupCache interface to MemoryGroupStore.
Added the Length method to MemoryGroupStore.
Added support for a site short name.
Added the UploadFiles permission.
Renamed more functions.
Fixed the background for the left gutter on the postbit for Tempra Simple and Shadow.
Added support for if statements operating on int8, int16, int32, int32, int64, uint, uint8, uint16, uint32, uint64, float32, and float64 for the template compiler.
Added support for if statements operating on slices and maps for the template compiler.
Fixed a security exploit in reply editing.
Fixed a bug in the URL detector in the parser where it couldn't find URLs with non-standard ports.
Fixed buttons having blue outlines on focus on Shadow.
Refactored the topic creation logic to make it easier to maintain.

Made a few responsive fixes, but there's still more to do in the following commits!

--- a/templates/create-topic.html
+++ b/templates/create-topic.html
@@ -4,25 +4,29 @@
 		<div class="rowitem"><h1>Create Topic</h1></div>
 	</div>
 	<div class="rowblock">
-		<form action="/topic/create/submit/" method="post">
-			<div class="formrow real_first_child">
-				<div class="formitem formlabel"><a>Board</a></div>
-				<div class="formitem"><select name="topic-board">
-					{{range .ItemList}}<option {{if eq .ID $.FID}}selected{{end}} value="{{.ID}}">{{.Name}}</option>{{end}}
-				</select></div>
-			</div>
-			<div class="formrow">
-				<div class="formitem formlabel"><a>Topic Name</a></div>
-				<div class="formitem"><input name="topic-name" type="text" placeholder="Topic Name" required /></div>
-			</div>
-			<div class="formrow">
-				<div class="formitem formlabel"><a>Content</a></div>
-				<div class="formitem"><textarea class="large" name="topic-content" placeholder="Insert content here" required></textarea></div>
-			</div>
-			<div class="formrow">
-				<div class="formitem"><button name="topic-button" class="formbutton form_middle_button">Create Topic</button></div>
-			</div>
-		</form>
+		<form id="topic_create_form_form" enctype="multipart/form-data" action="/topic/create/submit/" method="post"></form>
+		<div class="formrow real_first_child">
+			<div class="formitem formlabel"><a>Board</a></div>
+			<div class="formitem"><select form="topic_create_form_form" id="topic_board_input" name="topic-board">
+				{{range .ItemList}}<option {{if eq .ID $.FID}}selected{{end}} value="{{.ID}}">{{.Name}}</option>{{end}}
+			</select></div>
+		</div>
+		<div class="formrow">
+			<div class="formitem formlabel"><a>Topic Name</a></div>
+			<div class="formitem"><input form="topic_create_form_form" name="topic-name" type="text" placeholder="Topic Name" required /></div>
+		</div>
+		<div class="formrow">
+			<div class="formitem formlabel"><a>Content</a></div>
+			<div class="formitem"><textarea form="topic_create_form_form" class="large" id="topic_content" name="topic-content" placeholder="Insert content here" required></textarea></div>
+		</div>
+		<div class="formrow">
+			<button form="topic_create_form_form" name="topic-button" class="formbutton">Create Topic</button>
+			{{if .CurrentUser.Perms.UploadFiles}}
+			<input name="quick_topic_upload_files" form="topic_create_form_form" id="quick_topic_upload_files" multiple type="file" style="display: none;" />
+			<label for="quick_topic_upload_files" class="formbutton add_file_button">Add File</label>{{end}}
+			<div id="upload_file_dock"></div>
+			<button class="formbutton close_form">Cancel</button>
+		</div>
 	</div>
 </main>
 {{template "footer.html" . }}
