--- a/themes/tempra-simple/public/main.css
+++ b/themes/tempra-simple/public/main.css
@@ -17,7 +17,7 @@ ul {
 	padding-right: 0px;
 	height: 36px;
 	list-style-type: none;
-	border: 1px solid #ccc;
+	border: 1px solid hsl(0, 0%, 80%);
 	background-color: rgb(252,252,252);
 	margin-bottom: 12px;
 }
@@ -27,7 +27,7 @@ li {
 	padding-top: 8px;
 	padding-bottom: 8px;
 	background: white;
-	border-bottom: 1px solid #ccc;
+	border-bottom: 1px solid hsl(0, 0%, 80%);
 }
 li:hover { background: rgb(252,252,252); }
 li a {
@@ -38,12 +38,12 @@ li a {
 }
 .menu_left {
 	float: left;
-	border-right: 1px solid #ccc;
+	border-right: 1px solid hsl(0, 0%, 80%);
 	padding-right: 10px;
 }
 .menu_right {
 	float: right;
-	border-left: 1px solid #ccc;
+	border-left: 1px solid hsl(0, 0%, 80%);
 	padding-right: 10px;
 }
 .menu_overview {
@@ -105,10 +105,10 @@ li a {
 	line-height: 16px;
 	width: 300px;
 	right: calc(5% + 7px);
-	border-top: 1px solid #ccc;
-	border-left: 1px solid #ccc;
-	border-right: 1px solid #ccc;
-	border-bottom: 1px solid #ccc;
+	border-top: 1px solid hsl(0, 0%, 80%);
+	border-left: 1px solid hsl(0, 0%, 80%);
+	border-right: 1px solid hsl(0, 0%, 80%);
+	border-bottom: 1px solid hsl(0, 0%, 80%);
 	margin-bottom: 10px;
 }
 .alertItem {
@@ -150,7 +150,7 @@ li a {
 }
 
 .rowblock {
-	border: 1px solid #ccc;
+	border: 1px solid hsl(0, 0%, 80%);
 	width: 100%;
 	padding: 0px;
 	padding-top: 0px;
@@ -159,14 +159,14 @@ li a {
 	display: none;
 }
 .rowmenu {
-	border: 1px solid #ccc;
+	border: 1px solid hsl(0, 0%, 80%);
 }
 .rowsmall {
 	font-size: 12px;
 }
 
 /*.colblock_left {
-	border: 1px solid #ccc;
+	border: 1px solid hsl(0, 0%, 80%);
 	padding: 0px;
 	padding-top: 0px;
 	width: 30%;
@@ -174,7 +174,7 @@ li a {
 	margin-right: 8px;
 }
 .colblock_right {
-	border: 1px solid #ccc;
+	border: 1px solid hsl(0, 0%, 80%);
 	padding: 0px;
 	padding-top: 0px;
 	width: 65%;
@@ -195,7 +195,7 @@ li a {
 	width: calc(70% - 15px);
 }
 .colstack_item {
-	border: 1px solid #ccc;
+	border: 1px solid hsl(0, 0%, 80%);
 	padding: 0px;
 	padding-top: 0px;
 	width: 100%;
@@ -215,7 +215,7 @@ li a {
 	margin-top: 2px;
 }
 .grid_item {
-	border: 1px solid #ccc;
+	border: 1px solid hsl(0, 0%, 80%);
 	word-wrap: break-word;
 	background-color: white;
 	width: 100%;
@@ -260,7 +260,7 @@ li a {
 	background-color: white;
 }
 /*.rowitem:not(.passive) { font-size: 17px; }*/
-.rowitem:not(:last-child) { border-bottom: 1px dotted #ccc; }
+.rowitem:not(:last-child) { border-bottom: 1px dotted hsl(0, 0%, 80%); }
 .rowitem a {
 	text-decoration: none;
 	color: black;
@@ -272,7 +272,7 @@ li a {
 .rowitem.has_opt {
 	float: left;
 	width: calc(100% - 50px);
-	border-right: 1px solid #ccc;
+	border-right: 1px solid hsl(0, 0%, 80%);
 	border-bottom: none;
 }
 .opt {
@@ -283,8 +283,8 @@ li a {
 	width: 50px;
 	text-align: center;
 }
-.create_topic_opt a:before {
-	content '🖊︎';
+.create_topic_opt a.create_topic_link:before {
+	content: '🖊︎';
 }
 .create_topic_opt, .create_topic_opt a {
 	color: rgb(120,120,120);
@@ -321,7 +321,7 @@ li a {
 	display: table;
 }
 .formrow:after { clear: both; }
-.formrow:not(:last-child) { border-bottom: 1px dotted #ccc; }
+.formrow:not(:last-child) { border-bottom: 1px dotted hsl(0, 0%, 80%); }
 
 .formitem {
 	float: left;
@@ -330,8 +330,12 @@ li a {
 	/*font-size: 17px;*/
 	font-weight: normal;
 }
-.formitem:not(:last-child) { border-right: 1px dotted #ccc; }
-.formitem.invisible_border { border: none; }
+.formitem:not(:last-child) {
+	border-right: 1px dotted hsl(0, 0%, 80%);
+}
+.formitem.invisible_border {
+	border: none;
+}
 
 /* Mostly for textareas */
 .formitem:only-child { width: 100%; }
@@ -344,11 +348,18 @@ li a {
 	margin: 0 auto;
 	float: none;
 }
-.formitem:not(:only-child) input, .formitem:not(:only-child) select { padding: 3px;/*5px;*/ }
+.formitem:not(:only-child) input, .formitem:not(:only-child) select {
+	padding: 3px;/*5px;*/
+}
 .formitem:not(:only-child).formlabel {
 	padding-top: 15px;/*18px;*/
 	padding-bottom: 12px;/*16px;*/
 	/*padding-left: 15px;*/
+}
+
+.formbutton, button {
+	background: white;
+	border: 1px solid #8e8e8e;
 }
 .formbutton {
 	padding: 7px;
@@ -356,12 +367,7 @@ li a {
 	margin-left: auto;
 	margin-right: auto;
 	font-size: 15px;
-	border-color: #ccc;
-}
-
-button {
-	background: white;
-	border: 1px solid #8e8e8e;
+	border-color: hsl(0, 0%, 80%);
 }
 
 /* Topics */
@@ -390,6 +396,39 @@ button {
 	}
 }
 
+.postImage {
+	max-width: 100%;
+	max-height: 200px;
+	background-color: white;
+	padding: 10px;
+}
+
+.topic_create_form .topic_button_row .formitem {
+	display: flex;
+}
+.topic_create_form .formbutton:first-child {
+	margin-left: 0px;
+	margin-right: 5px;
+}
+.topic_create_form .formbutton:not(:first-child) {
+	margin-left: 0px;
+	margin-right: 5px;
+}
+.topic_create_form .formbutton:last-child {
+	margin-left: auto;
+}
+.topic_create_form .upload_file_dock {
+	display: flex;
+}
+.topic_create_form .uploadItem {
+	display: inline-block;
+	margin-left: 8px;
+	margin-right: 8px;
+	background-size: 25px 35px;
+	background-repeat: no-repeat;
+	padding-left: 30px;
+}
+
 .username, .panel_tag {
 	text-transform: none;
 	margin-left: 0px;
@@ -400,7 +439,7 @@ button {
 	color: #505050; /* 80,80,80 */
 	background-color: #FFFFFF;
 	border-style: solid;
-	border-color: #ccc;
+	border-color: hsl(0, 0%, 80%);
 	border-width: 1px;
 	font-size: 15px;
 }
@@ -553,7 +592,7 @@ button.username {
 }
 
 .postQuote {
-	border: 1px solid #ccc;
+	border: 1px solid hsl(0, 0%, 80%);
 	background: white;
 	padding: 5px;
 	margin: 0px;
@@ -578,7 +617,7 @@ button.username {
 	display: block;
 	padding: 5px;
 	margin-bottom: 10px;
-	border: 1px solid #ccc;
+	border: 1px solid hsl(0, 0%, 80%);
 }
 .alert_success {
 	display: block;
@@ -616,8 +655,12 @@ button.username {
 	text-decoration: none;
 	color: #505050;
 }
-.prev_button { left: 14px; }
-.next_button { right: 14px; }
+.prev_button {
+	left: 14px;
+}
+.next_button {
+	right: 14px;
+}
 .head_tag_upshift {
 	float: right;
 	position: relative;
@@ -625,7 +668,7 @@ button.username {
 }
 
 .footer {
-	border: 1px solid #ccc;
+	border: 1px solid hsl(0, 0%, 80%);
 	margin-top: 12px;
 	clear: both;
 	height: 40px;
@@ -697,7 +740,7 @@ button.username {
 	padding: 5px;
 	margin-right: 5px;
 	padding-bottom: 4px;
-	border: 1px solid #ccc;
+	border: 1px solid hsl(0, 0%, 80%);
 }
 .pageitem a {
 	color: black;
