--- a/templates/menu.html
+++ b/templates/menu.html
@@ -2,10 +2,9 @@
 	<div class="move_left">
 	<div class="move_right">
 	<ul>{{/** Add a menu manager **/}}
-		<li class="menu_left menu_overview"><a href="/" rel="home">{{.Header.Site.Name}}</a></li>
+		<li class="menu_left menu_overview"><a href="/" rel="home">{{.Header.Site.ShortName}}</a></li>
 		<li class="menu_left menu_forums"><a href="/forums/">Forums</a></li>
 		<li class="menu_left menu_topics"><a href="/">Topics</a></li>
-		<li class="menu_left menu_create_topic"><a href="/topics/create/">Create Topic</a></li>
 		<li id="general_alerts" class="menu_right menu_alerts">
 			<div class="alert_bell"></div>
 			<div class="alert_counter"></div>
